# thetis-skin-maker-legacy

./: .gitignore  README.txt  ThetisSkinMaker.bat  dist.sh  meson.build
src/: ThetisSkinMaker.vala  Window.vala  config.vala.in  menu.ui  meson.build  thetisskinmaker.gresources.xml  win32.c  window.ui
src/Utils/: ISkinManager.vala  NoopSkinManager.vala  SkinError.vala  SkinManagerFactory.vala  ThetisSkinManager.vala
