tsm_src += files(
    'ThetisSkinMaker.vala',
    'Window.vala',
    'win32.c',
    'Utils/ISkinManager.vala',
    'Utils/ThetisSkinManager.vala',
    'Utils/SkinManagerFactory.vala',
    'Utils/NoopSkinManager.vala',
    'Utils/SkinError.vala',
)

tsm_src += gnome.compile_resources('thetisskinmaker-gresources',
                                   'thetisskinmaker.gresources.xml')